# python-lib-issues-6-demo-2

./: pyproject.toml
tests/: test_python_lib_issues_6_demo_2.py
